Fixed background color clipping && minor css for results

--- a/mentor-me-app/src/index.scss
+++ b/mentor-me-app/src/index.scss
@@ -25,7 +25,6 @@ body {
   background: linear-gradient(180deg,#60C3FF,#5574F7);
   height: 100%;
   background-repeat: no-repeat;
-  background-attachment: fixed;
 
     
 
